@@ -19,42 +19,15 @@
 package co.elastic.apm.agent.struts;
 
 import co.elastic.apm.agent.bci.TracerAwareInstrumentation;
-import net.bytebuddy.description.NamedElement;
-import net.bytebuddy.description.method.MethodDescription;
-import net.bytebuddy.description.type.TypeDescription;
-import net.bytebuddy.matcher.ElementMatcher;
 
 import java.util.Collection;
 
 import static java.util.Collections.singletonList;
-import static net.bytebuddy.matcher.ElementMatchers.hasSuperType;
-import static net.bytebuddy.matcher.ElementMatchers.nameContains;
-import static net.bytebuddy.matcher.ElementMatchers.named;
 
-public class Struts2TransactionNameInstrumentation extends TracerAwareInstrumentation {
-
-    @Override
-    public ElementMatcher<? super NamedElement> getTypeMatcherPreFilter() {
-        return nameContains("ActionProxy");
-    }
-
-    @Override
-    public final ElementMatcher<? super TypeDescription> getTypeMatcher() {
-        return hasSuperType(named("com.opensymphony.xwork2.ActionProxy"));
-    }
-
-    @Override
-    public ElementMatcher<? super MethodDescription> getMethodMatcher() {
-        return named("execute");
-    }
+abstract class StrutsInstrumentation extends TracerAwareInstrumentation {
 
     @Override
     public Collection<String> getInstrumentationGroupNames() {
         return singletonList("struts");
-    }
-
-    @Override
-    public String getAdviceClassName() {
-        return "co.elastic.apm.agent.struts.Struts2TransactionNameAdvice";
     }
 }
