@@ -1,1 +1,2 @@
-co.elastic.apm.agent.struts.Struts2TransactionNameInstrumentation
+co.elastic.apm.agent.struts.ActionProxyInstrumentation
+co.elastic.apm.agent.struts.ExecuteOperationsInstrumentation
