@@ -34,6 +34,7 @@ endif::[]
 * When the `MANIFEST.MF` of the main jar contains the `Implementation-Version` attribute, it is used as the default service version (except for application servers) - {pull}1922[#1922]
 * Added support for overwritting the service version per classloader - {pull}1726[#1726]
 * Support for the Java LDAP client - {pull}2355[#2355]
+* Added support for instrumenting Struts 2 static resource requests - {pull}1949[#1949]
 
 [float]
 ===== Bug fixes
